--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body bgcolor="#04005E">
 	<div>
 		<div class="linkContainer">
-			<a href="page1.html">gallery</a>
-			<a href="index.html">neon lights</a>
-			<a href="about.html">about</a>
+			<a href="page1.html" class="class1">gallery</a>
+			<a href="index.html" class="class2">neon lights</a>
+			<a href="about.html" class="class3">about</a>
 	    </div>
 	    <div class="titleDiv">
 	    	<div class="titleText">
