--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 	    <div class="aboutpage">
 	    	<h2>about</h2>
 	    	<div class="picturetext">
-		    	<div class="textbox">
+		    	<div class="textbox" class = "class1">
 		    		<h3>the photographer</h3>
 		    		<p>i've always had an interest in photography since my parents first bought a DSLR camera. since then, i've always brought it along on vacations, usually to take pictures of wildlife (like the two shown here, taken on a vacation to argentina). this project would be my first time actually going out and looking for a vague idea for a photo, capturing whatever inspires me, and then organizing them into a kind of gallery or collection which i think is worth sharing.</p>
 		    	</div>
