--- a/page12.html
+++ b/page12.html
@@ -14,7 +14,7 @@
 	    </div>
 	    <div class="galleryDiv">
 	    	<div class="imageDiv">
-		  		<a href="page13.html"><img src="images/goodfood.jpg" class="imageClass"></a>
+		  		<a href="page13.html"><img src="images/goodfood.jpg" class="imageClassWide"></a>
 		  		<a href="page13.html">
 		  			<div class="hoverClass">
 			    		<div class="text">Jojo Duck - 131 Walker St</div>
