--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
 	    </div>
 	    <div class="galleryDiv">
 	    	<div class="imageDiv">
-		  		<a href="page3.html"><img src="images/chili.jpg" class="imageClass"></a>
+		  		<a href="page3.html"><img src="images/chili.jpg" class="imageClassWide"></a>
 		  		<a href="page3.html">
 		  			<div class="hoverClass">
 			    		<div class="text">CHILI - 13 East 37th St</div>
