--- a/page3.html
+++ b/page3.html
@@ -14,7 +14,7 @@
 	    </div>
 	    <div class="galleryDiv">
 	    	<div class="imageDiv">
-		  		<a href="page4.html"><img src="images/unregularpizza.jpg" class="imageClass"></a>
+		  		<a href="page4.html"><img src="images/unregularpizza.jpg" class="imageClassWide"></a>
 		  		<a href="page4.html">
 		  			<div class="hoverClass">
 			    		<div class="text">Unregular Pizza - 14 E 37th St</div>
