--- a/page4.html
+++ b/page4.html
@@ -14,7 +14,7 @@
 	    </div>
 	    <div class="galleryDiv">
 	    	<div class="imageDiv">
-		  		<a href="page5.html"><img src="images/reservoir.jpg" class="imageClass"></a>
+		  		<a href="page5.html"><img src="images/reservoir.jpg" class="imageClassWide"></a>
 		  		<a href="page5.html">
 		  			<div class="hoverClass">
 			    		<div class="text">Reservoir - 70 University Pl</div>
