--- a/page7.html
+++ b/page7.html
@@ -14,7 +14,7 @@
 	    </div>
 	    <div class="galleryDiv">
 	    	<div class="imageDiv">
-		  		<a href="page8.html"><img src="images/thecorner.jpg" class="imageClass"></a>
+		  		<a href="page8.html"><img src="images/thecorner.jpg" class="imageClassWide"></a>
 		  		<a href="page8.html">
 		  			<div class="hoverClass">
 			    		<div class="text">The Corner Deli - 106 Kenmare St</div>
