--- a/page8.html
+++ b/page8.html
@@ -14,7 +14,7 @@
 	    </div>
 	    <div class="galleryDiv">
 	    	<div class="imageDiv">
-		  		<a href="page9.html"><img src="images/eanelli.jpg" class="imageClass"></a>
+		  		<a href="page9.html"><img src="images/eanelli.jpg" class="imageClassWide"></a>
 		  		<a href="page9.html">
 		  			<div class="hoverClass">
 			    		<div class="text">Fanelli Cafe - 94 Prince St</div>
