--- a/page11.html
+++ b/page11.html
@@ -14,7 +14,7 @@
 	    </div>
 	    <div class="galleryDiv">
 	    	<div class="imageDiv">
-		  		<a href="page12.html"><img src="images/think.jpg" class="imageClass"></a>
+		  		<a href="page12.html"><img src="images/think.jpg" class="imageClassWide"></a>
 		  		<a href="page12.html">
 		  			<div class="hoverClass">
 			    		<div class="text">Think Coffee - 471 Broadway</div>
