--- a/page6.html
+++ b/page6.html
@@ -14,7 +14,7 @@
 	    </div>
 	    <div class="galleryDiv">
 	    	<div class="imageDiv">
-		  		<a href="page7.html"><img src="images/books.jpg" class="imageClass"></a>
+		  		<a href="page7.html"><img src="images/books.jpg" class="imageClassWide"></a>
 		  		<a href="page7.html">
 		  			<div class="hoverClass">
 			    		<div class="text">Mercer Street Books & Records - 206 Mercer St</div>
